--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
 	14. BLOG
 	15. FOOTER
 	16. SCROLL TO TOP
+	17. TIMELINE
 
 */
 
@@ -136,6 +137,7 @@
 		height: 100%;
 		opacity: 0.8;
 	}
+
 
 
 /* 3. BUTTONS */
@@ -373,7 +375,7 @@
 
 	#services{
 		background-color: #f5f5f5;
-		padding-top: 130px;
+		padding-top: 40px;
 		padding-bottom: 120px;
 	}
 
@@ -404,7 +406,10 @@
 
 
 /* 7. OUR WORKS */
-
+	#our-works{
+		padding-top: 75px;
+		padding-bottom: 20px;
+	}
 	.isotope-item {
 	    z-index: 2;
 	}
@@ -427,10 +432,7 @@
 	    transition-property:transform, opacity;
 	}
 
-	#our-works{
-		padding-top: 130px;
-		padding-bottom: 120px;
-	}
+
 
 	.portfolio-wrapper ul.filter{
 		list-style: none;
@@ -499,11 +501,23 @@
 	.portfolio-wrapper .portfolio-overlay a{
 		color: #fff;
 		font-size: 35px;
+		transition: all .2s ease-in-out;
 	}
 	.portfolio-wrapper .portfolio-overlay a:hover{
 		color: #fff;
+
+	}
+	.portfolio-overlay i{
+		transition: all .2s ease-in-out;
 	}
 
+	.portfolio-overlay i:hover{
+
+		transform: scale(1.5);
+		-moz-transform: scale(1.5);
+		-webkit-transform: scale(1.5);
+		-ms-transform: scale(1.5);
+	}
 
 
 /* 8. PRICING */
@@ -563,9 +577,15 @@
 
 
 /* 9. ABOUT US */
-	
+
+
+	#about{
+		padding-top: 60px;
+		padding-bottom:60px;
+	}
 	#about-us{
 		background-color: #f5f5f5;
+
 	}
 
 	#about-us .about-us{
@@ -635,6 +655,8 @@
 		padding-top: 130px;
 		padding-bottom: 120px;
 	}
+
+
 
 	.team-member{
 		margin-top: 30px;
@@ -1085,3 +1107,263 @@
 
 
 
+/*17. TIMELINE*/
+.timeline {
+	list-style: none;
+	padding: 20px 0 20px;
+	position: relative;
+}
+
+.timeline:before {
+	top: 0;
+	bottom: 0;
+	position: absolute;
+	content: " ";
+	width: 3px;
+	background-color: #eeeeee;
+	left: 50%;
+	margin-left: -1.5px;
+}
+
+.timeline > li {
+	margin-bottom: 20px;
+	position: relative;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+	content: " ";
+	display: table;
+}
+
+.timeline > li:after {
+	clear: both;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+	content: " ";
+	display: table;
+}
+
+.timeline > li:after {
+	clear: both;
+}
+
+.timeline > li > .timeline-panel {
+	width: 46%;
+	float: left;
+	border: 1px solid #d4d4d4;
+	border-radius: 2px;
+	padding: 20px;
+	position: relative;
+	-webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+	background-color: white;
+}
+
+.timeline > li > .timeline-panel:before {
+	position: absolute;
+	top: 26px;
+	right: -15px;
+	display: inline-block;
+	border-top: 15px solid transparent;
+	border-left: 15px solid #ccc;
+	border-right: 0 solid #ccc;
+	border-bottom: 15px solid transparent;
+	content: " ";
+}
+
+.timeline > li > .timeline-panel:after {
+	position: absolute;
+	top: 27px;
+	right: -14px;
+	display: inline-block;
+	border-top: 14px solid transparent;
+	border-left: 14px solid #fff;
+	border-right: 0 solid #fff;
+	border-bottom: 14px solid transparent;
+	content: " ";
+}
+
+.timeline > li > .timeline-badge {
+	color: #fff;
+	width: 50px;
+	height: 50px;
+	font-weight:lighter !important;
+	line-height: 50px;
+	font-size: 1.4em;
+	text-align: center;
+	position: absolute;
+	top: 16px;
+	left: 50%;
+	margin-left: -25px;
+	background-color: #C30000;
+	z-index: 100;
+	border-top-right-radius: 50%;
+	border-top-left-radius: 50%;
+	border-bottom-right-radius: 50%;
+	border-bottom-left-radius: 50%;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel {
+	float: right;
+	background-color: white;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:before {
+	border-left-width: 0;
+	border-right-width: 15px;
+	left: -15px;
+	right: auto;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:after {
+	border-left-width: 0;
+	border-right-width: 14px;
+	left: -14px;
+	right: auto;
+}
+
+.timeline-badge.primary {
+	background-color: #2e6da4 !important;
+}
+
+.timeline-badge.success {
+	background-color: #3f903f !important;
+}
+
+.timeline-badge.warning {
+	background-color: #f0ad4e !important;
+}
+
+.timeline-badge.danger {
+	background-color: #d9534f !important;
+}
+
+.timeline-badge.info {
+	background-color: #5bc0de !important;
+}
+
+.timeline-title {
+	margin-top: 0;
+	color: inherit;
+}
+
+.timeline-body > p,
+.timeline-body > ul {
+	margin-bottom: 0;
+}
+
+.timeline-body > p + p {
+	margin-top: 5px;
+}
+
+@media (max-width: 767px) {
+	ul.timeline:before {
+		left: 40px;
+	}
+
+	ul.timeline > li > .timeline-panel {
+		width: calc(100% - 90px);
+		width: -moz-calc(100% - 90px);
+		width: -webkit-calc(100% - 90px);
+	}
+
+	ul.timeline > li > .timeline-badge {
+		left: 15px;
+		margin-left: 0;
+		top: 16px;
+	}
+
+	ul.timeline > li > .timeline-panel {
+		float: right;
+	}
+
+	ul.timeline > li > .timeline-panel:before {
+		border-left-width: 0;
+		border-right-width: 15px;
+		left: -15px;
+		right: auto;
+	}
+
+	ul.timeline > li > .timeline-panel:after {
+		border-left-width: 0;
+		border-right-width: 14px;
+		left: -14px;
+		right: auto;
+	}
+}
+
+
+/* ADDED */
+ul.estructuras li{
+	padding: 0 !important;
+
+}
+.estructuras{
+	list-style: none;
+	list-style-type: none;
+}
+
+.estruc{
+	margin-left:15px;
+	list-style-type: disc !important;
+}
+.iconlink{
+	z-index:999;
+	-webkit-transition: all 0.3s ease-in;
+	-moz-transition: all 0.3s ease-in ;
+	-ms-transition: all 0.3s ease-in ;
+	-o-transition: all 0.3s ease-in;
+	transition: all 0.3s ease-in ;
+}
+.iconlink:hover{
+ 	-webkit-transform: scale(1.2);
+	-moz-transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	-o-transform: scale(1.2);
+	transform: scale(1.2);
+}
+
+#about{
+	background-image: url(../images/small_steps.png);
+}
+ul.timeline::before{
+	background-color:#777;
+}
+#services,#contact{
+	background-image: url(../images/green_cup.png);
+	padding-top: 60px;
+	padding-bottom:60px;
+}
+#estructuras{
+	background-image: url(../images/p6.png);
+
+	padding-top: 50px;
+	padding-bottom: 50px;
+
+}
+#pm{
+	background-image: url(../images/notebook.jpg);
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+#otros{
+	/*background-image: url(../images/testimonial-bg2.jpg);*/
+	background-color:#333;
+	background-repeat: no-repeat;
+	background-size: cover;
+
+}
+.st-pricing  p {
+	text-align: left;
+}
+.st-pricing  img {
+	text-align: center;
+	display:inline;
+}
+
+p, #pm li  {
+	font-weight: 600;
+}
