--- a/css/owl.carousel.css
+++ b/css/owl.carousel.css
@@ -55,7 +55,7 @@
 
 /* mouse grab icon */
 .grabbing { 
-    cursor:(grabbing.png) 8 8, move;
+    cursor:("grabbing.png") 8 8, move;
 }
 
 /* fix */
@@ -68,4 +68,3 @@
   -moz-transform: translate3d(0,0,0);
   -ms-transform: translate3d(0,0,0);
 }
-
