--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,7 @@
 
 	.portfolio-wrapper .portfolio-overlay{
 		position: absolute;
-		background-color: rgba(0, 0, 0, 0.7);
+		background-color: rgba(0, 0, 0, 0.3);
 		color: #fff;
 		left: 0;
 		bottom: 0;
@@ -477,11 +477,7 @@
 		height: 100%;
 		padding: 30px;
 		opacity: 0;
-		-webkit-transition: all 0.3s ease-out 0s;
-		-moz-transition: all 0.3s ease-out 0s;
-		-ms-transition: all 0.3s ease-out 0s;
-		-o-transition: all 0.3s ease-out 0s;
-		transition: all 0.3s ease-out 0s;
+
 		-moz-transform: scale(0.5);
 		-webkit-transform: scale(0.5);
 		-o-transform: scale(0.5);
@@ -501,7 +497,6 @@
 	.portfolio-wrapper .portfolio-overlay a{
 		color: #fff;
 		font-size: 35px;
-		transition: all .2s ease-in-out;
 	}
 	.portfolio-wrapper .portfolio-overlay a:hover{
 		color: #fff;
@@ -1366,4 +1361,25 @@ ul.timeline::before{
 
 p, #pm li  {
 	font-weight: 600;
+}
+
+.portfolio-content{
+	overflow: hidden;
+}
+.portfolio-content img{
+	-webkit-transition: all 0.2s ease-in;
+	-moz-transition: all 0.2s ease-in;
+	-ms-transition: all 0.2s ease-in;
+	-o-transition: all 0.2s ease-in;
+	transition: all 0.2s ease-in;
+}
+.portfolio-content:hover  img{
+	-webkit-transform: scale(1.5);
+	-moz-transform:  scale(1.5);
+	-ms-transform:  scale(1.5);
+	-o-transform:  scale(1.5);
+	transform:  scale(1.5);
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+	filter: gray; /* IE6-9 */
+	-webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
 }
