--- a/css/style.css
+++ b/css/style.css
@@ -1363,6 +1363,7 @@ p, #pm li  {
 	font-weight: 600;
 }
 
+
 .portfolio-content{
 	overflow: hidden;
 }
@@ -1382,4 +1383,8 @@ p, #pm li  {
 	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
 	filter: gray; /* IE6-9 */
 	-webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
+}
+
+#services .clearfix{
+	height:50px;
 }
